v1.0.0/modules/schema/pages/class/Customer.adoc
= `Customer`
:toclevels: 4


+++Organisation receiving services from service supplier.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Customer`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/OrganisationRole.adoc[`OrganisationRole`]
*** *`Customer`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Customer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Priority {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Work {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldPerson {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CustomerAgreement {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CustomerAccount {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OutagePlan {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Person {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Customer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDevice {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CustomerNotification {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ServiceRequest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PlannedOutageNotification {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleTicket {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Organisation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Customer -> Priority: priority


Customer -> Status: status


Customer -> Work: Works


Customer -> OldPerson: ErpPersons


Customer -> CustomerAgreement: CustomerAgreements


Customer -> CustomerAccount: CustomerAccounts


Customer -> OutagePlan: OutagePlan


Customer -> Person: Person


Customer -> Customer: Customer


Customer -> EndDevice: EndDevices


Customer -> CustomerNotification: CustomerNotifications


Customer -> ServiceRequest: ServiceRequest


Customer -> PlannedOutageNotification: PlannedOutageNotification


Customer -> TroubleTicket: TroubleTickets


Customer -> Organisation: Organisation


Customer -> ConfigurationEvent: ConfigurationEvents


Customer -> DiagramObject: DiagramObjects


Customer -> InstanceSet: InstanceSet


Customer -> Name: Names


Customer -> ChangeSetMember: PropertiesCIMDataObject


Customer -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Customer,`Customer`>>
| 0..1
| xref::class/Customer.adoc[`Customer`]
| +++The primary customer that manages the account(s).+++

| <<OutagePlan,`OutagePlan`>>
| 0..1
| xref::class/OutagePlan.adoc[`OutagePlan`]
| +++The outage plan that identifies the customers that are affected.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/CustomerKind.adoc[`CustomerKind`]
| +++Kind of customer.+++

| <<locale,`locale`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Locale designating language to use in communications with this customer.+++

| <<priority,`priority`>>
| 0..1
| xref::class/Priority.adoc[`Priority`]
| +++Priority of the customer.+++

| <<pucNumber,`pucNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++(if applicable) Public utilities commission (PUC) identification number.+++

| <<specialNeed,`specialNeed`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++True if customer organisation has special service needs such as life support, hospitals, etc.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this customer.+++

| <<vip,`vip`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++(deprecated) (use 'priority' instead) True if this is an important customer. Importance is for matters different than those in 'specialNeed' attribute.+++

| <<CustomerAccounts,`CustomerAccounts`>>
| 0..*
| xref::class/CustomerAccount.adoc[`CustomerAccount`]
| +++All accounts of this customer.+++

| <<CustomerAgreements,`CustomerAgreements`>>
| 0..*
| xref::class/CustomerAgreement.adoc[`CustomerAgreement`]
| +++All agreements of this customer.+++

| <<CustomerNotifications,`CustomerNotifications`>>
| 0..*
| xref::class/CustomerNotification.adoc[`CustomerNotification`]
| +++All notifications required by this customer.+++

| <<EndDevices,`EndDevices`>>
| 0..*
| xref::class/EndDevice.adoc[`EndDevice`]
| +++All end devices of this customer.+++

| <<ErpPersons,`ErpPersons`>>
| 0..*
| xref::class/OldPerson.adoc[`OldPerson`]
| n/a

| <<Person,`Person`>>
| 0..*
| xref::class/Person.adoc[`Person`]
| +++The person representing the customer+++

| <<PlannedOutageNotification,`PlannedOutageNotification`>>
| 0..*
| xref::class/PlannedOutageNotification.adoc[`PlannedOutageNotification`]
| +++The notification of the planned outage+++

| <<ServiceRequest,`ServiceRequest`>>
| 0..*
| xref::class/ServiceRequest.adoc[`ServiceRequest`]
| +++All service requests for the customer+++

| <<TroubleTickets,`TroubleTickets`>>
| 0..*
| xref::class/TroubleTicket.adoc[`TroubleTicket`]
| +++All trouble tickets for this customer.+++

| <<Works,`Works`>>
| 0..*
| xref::class/Work.adoc[`Work`]
| +++All the works performed for this customer.+++

| <<Organisation,`Organisation`>>
| 0..1
| xref::class/Organisation.adoc[`Organisation`]
| +++Organisation having this role.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this organisation role.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this organisation role.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OrganisationRole.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/OrganisationRole.adoc[`OrganisationRole`]


|===

//[discrete]
[#Customer]
=== `Customer`
+++The primary customer that manages the account(s).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.Customer`
| Cardinality
| 0..1
| Type
| xref::class/Customer.adoc[`Customer`]


|===

//[discrete]
[#CustomerAccounts]
=== `CustomerAccounts`
+++All accounts of this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.CustomerAccounts`
| Cardinality
| 0..*
| Type
| xref::class/CustomerAccount.adoc[`CustomerAccount`]


|===

//[discrete]
[#CustomerAgreements]
=== `CustomerAgreements`
+++All agreements of this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.CustomerAgreements`
| Cardinality
| 0..*
| Type
| xref::class/CustomerAgreement.adoc[`CustomerAgreement`]


|===

//[discrete]
[#CustomerNotifications]
=== `CustomerNotifications`
+++All notifications required by this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.CustomerNotifications`
| Cardinality
| 0..*
| Type
| xref::class/CustomerNotification.adoc[`CustomerNotification`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EndDevices]
=== `EndDevices`
+++All end devices of this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.EndDevices`
| Cardinality
| 0..*
| Type
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#ErpPersons]
=== `ErpPersons`


[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.ErpPersons`
| Cardinality
| 0..*
| Type
| xref::class/OldPerson.adoc[`OldPerson`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kind]
=== `kind`
+++Kind of customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CustomerKind.adoc[`CustomerKind`]


|===

//[discrete]
[#locale]
=== `locale`
+++Locale designating language to use in communications with this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.locale`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Organisation]
=== `Organisation`
+++Organisation having this role.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OrganisationRole.Organisation`
| Cardinality
| 0..1
| Type
| xref::class/Organisation.adoc[`Organisation`]

| Inherited from
| xref::class/OrganisationRole.adoc[`OrganisationRole`]


|===

//[discrete]
[#OutagePlan]
=== `OutagePlan`
+++The outage plan that identifies the customers that are affected.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.OutagePlan`
| Cardinality
| 0..1
| Type
| xref::class/OutagePlan.adoc[`OutagePlan`]


|===

//[discrete]
[#Person]
=== `Person`
+++The person representing the customer+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.Person`
| Cardinality
| 0..*
| Type
| xref::class/Person.adoc[`Person`]


|===

//[discrete]
[#PlannedOutageNotification]
=== `PlannedOutageNotification`
+++The notification of the planned outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.PlannedOutageNotification`
| Cardinality
| 0..*
| Type
| xref::class/PlannedOutageNotification.adoc[`PlannedOutageNotification`]


|===

//[discrete]
[#priority]
=== `priority`
+++Priority of the customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.priority`
| Cardinality
| 0..1
| Type
| xref::class/Priority.adoc[`Priority`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pucNumber]
=== `pucNumber`
+++(if applicable) Public utilities commission (PUC) identification number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.pucNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#ServiceRequest]
=== `ServiceRequest`
+++All service requests for the customer+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.ServiceRequest`
| Cardinality
| 0..*
| Type
| xref::class/ServiceRequest.adoc[`ServiceRequest`]


|===

//[discrete]
[#specialNeed]
=== `specialNeed`
+++True if customer organisation has special service needs such as life support, hospitals, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.specialNeed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#status]
=== `status`
+++Status of this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TroubleTickets]
=== `TroubleTickets`
+++All trouble tickets for this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.TroubleTickets`
| Cardinality
| 0..*
| Type
| xref::class/TroubleTicket.adoc[`TroubleTicket`]


|===

//[discrete]
[#vip]
=== `vip`
+++(deprecated) (use 'priority' instead) True if this is an important customer. Importance is for matters different than those in 'specialNeed' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.vip`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#Works]
=== `Works`
+++All the works performed for this customer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Customer.Works`
| Cardinality
| 0..*
| Type
| xref::class/Work.adoc[`Work`]


|===


